src/objects/CaseProducts__c.object
<CustomObject>
    <description>SFDC1-593 - Junction object between Case and Products</description>
    <fields>
        <fullName>Case__c</fullName>
        <description>SFDC1-593 - Master Detail relationship to Case</description>
        <inlineHelpText>Select the Case you wish to relate to additional Products</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Products</relationshipLabel>
        <relationshipName>CaseProducts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PKIDCaseProducts__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>CPr{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID CaseProducts</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7599: Adding product family related record</description>
        <inlineHelpText>Select a Product Family (if known). Field will be auto-completed if Product is selected.</inlineHelpText>
        <label>Product Family</label>
        <referenceTo>Family__c</referenceTo>
        <relationshipLabel>Case Product Families</relationshipLabel>
        <relationshipName>CaseProductFamily</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7599: Adding product family related record</description>
        <inlineHelpText>Select a Product Group. Field will be auto-completed if Product or Product Family is selected.</inlineHelpText>
        <label>Product Group</label>
        <referenceTo>ProductGroup__c</referenceTo>
        <relationshipLabel>Case Product Groups</relationshipLabel>
        <relationshipName>CaseProductGroups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-593 - Lookup to Product</description>
        <inlineHelpText>Select a Product (if known).</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Case Products</relationshipLabel>
        <relationshipName>CaseProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Products</label>
    <nameField>
        <displayFormat>CP-{000000}</displayFormat>
        <label>Case Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>